# CoverageControl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists_8txt.html  CoverageControl-config.cmake.in  CoverageControl_config.h.in  README.md  README_8md.html  ____init_____8py.html  ____init_____8py.js  ____init_____8py_source.html  __version_8pyi.html  __version_8pyi.js  __version_8pyi_source.html  abstract__controller_8h.html  abstract__controller_8h__dep__incl.map  abstract__controller_8h__dep__incl.md5  abstract__controller_8h__incl.map  abstract__controller_8h__incl.md5  abstract__controller_8h_source.html  algorithms_2____init_____8py.html  algorithms_2____init_____8py_source.html  bivariate__normal__distribution_8h.html  bivariate__normal__distribution_8h__dep__incl.map  bivariate__normal__distribution_8h__dep__incl.md5  bivariate__normal__distribution_8h__incl.map  bivariate__normal__distribution_8h__incl.md5  bivariate__normal__distribution_8h_source.html  centralized__cvt_8h.html  centralized__cvt_8h__dep__incl.map  centralized__cvt_8h__dep__incl.md5  centralized__cvt_8h__incl.map  centralized__cvt_8h__incl.md5  centralized__cvt_8h_source.html  clairvoyant__cvt_8h.html  clairvoyant__cvt_8h__dep__incl.map  clairvoyant__cvt_8h__dep__incl.md5  clairvoyant__cvt_8h__incl.map  clairvoyant__cvt_8h__incl.md5  (+747 more)
core/: CMakeLists.txt  setup.sh
core/cmake/: Config.cmake.in  CoverageControlConfig.h.in
core/include/CoverageControl/: bivariate_normal_distribution.h  cgal_config.h  cgal_utilities.h  constants.h  coverage_system.h  generate_world_map.ch  geographiclib_wrapper.h  geometry_utils.ch  lloyd_algorithms.h  map_utils.h  oracle_cnn_data.h  oracle_global_offline.h  parameters.h  plotter.h  robot_model.h  typedefs.h  vec2d.h  voronoi.h  world_idf.h
core/params/: parameters.yaml
core/scripts/: semantic_data.json  test_library_objects.py  testplot.py
core/scripts/data_generators/: dense_gnn_data_generation.py  sparse_gnn_data_generation.py
core/scripts/gnuplot/: plot_map.gp  plot_oracle.gp  world_map_plot.gp
core/scripts/python/: cnn_data_3channel.py  cnn_data_generation.py  cnn_data_generation_NoCommsMap.py  cnn_oracle_viz.py  coverage.py  coverage_algorithm.py  env_read_write_test.py  geo_transforms.py  gnn_ExploreExploit.py  gnn_data_generation.py  gnn_data_generation_NoCommsMap.py  gnn_data_llyod_global.py  lloyd.py  lloyd_global_viz.py  lloyd_offline.py  oracle.py  oracle_data.py  semantic_environment.py  semantic_map.py  test_coverage_simple.py  test_library_objects.py  testplot.py  viz_oracle_map.py
core/src/: coverage_control_python_binds.cpp  coverage_system.cpp  generate_world_map.cu  parameters.cpp  polygon_utils.cpp  voronoi.cpp
core/test/: CMakeLists.txt  coverage_algorithm.cpp  coverage_algorithm_compare.cpp  data_generation.cpp  geo_transforms.cpp  lloyd_global.cpp  lloyd_local.cpp  map_generation.cpp  oracle.cpp  robot_map.cpp  system_map.cpp
core/torch_extensions/: CMakeLists.txt  setup2.py
cppsrc/core/: CMakeLists.txt
cppsrc/core/cmake/: Config.cmake.in  CoverageControlConfig.cmake.in  CoverageControlConfig.h.in  CoverageControlCoreConfig.cmake.in  CoverageControlCoreConfig.h.in
cppsrc/core/python_bindings/: CMakeLists.txt  core_binds.h  pyproject.toml  python_binds.cpp
cppsrc/core/src/: coverage_system.cpp  cuda_utils.cpp  generate_world_map.cu  parameters.cpp  plotter.cpp  polygon_utils.cpp  voronoi.cpp  world_idf.cpp
cppsrc/core/torch_extensions/: extensions.cpp  setup.py
cppsrc/main/: CMakeLists.txt  coverage_algorithm.cpp  data_generation.cpp  eval_dist_gnn.cpp  eval_gnn.cpp  test_cnn.cpp  train_cnn.cpp  train_gnn.cpp  world_idf.cpp
cppsrc/main/torch/: data_generation.cpp  eval_dist_gnn.cpp  eval_gnn.cpp  test_cnn.cpp  train_cnn.cpp  train_gnn.cpp
cppsrc/tests/: CMakeLists.txt  coverage_algorithm.cpp  data_generation.cpp  geo_transforms.cpp  map_generation.cpp  simultaneous_explore_exploit.cpp  test_basic.py  test_gauss2d_rec.py  test_maps.cpp  torch_data_loader.cpp  torch_map_conversion.cpp  torch_normalization.cpp  torch_test.cpp  voronoi.cpp
cppsrc/tests/torch/: torch_data_loader.cpp  torch_map_conversion.cpp  torch_normalization.cpp  torch_scripting.cpp  torch_test.cpp
cppsrc/torch/: CMakeLists.txt
cppsrc/torch/cmake/: Config.cmake.in  CoverageControlTorchConfig.cmake.in  CoverageControlTorchConfig.h.in
cppsrc/torch/python_bindings/: CMakeLists.txt
cppsrc/torch/src/: base.cpp  coverage_system.cpp
python/: core_binds.h  pyproject.toml
python/core/: CMakeLists.txt
python/core/src/: coverage_control_python_binds.cpp
python/coverage_control/: __init__.py  coverage_env_utils.py  io_utils.py
python/coverage_control/algorithms/: __init__.py  controllers.py
python/coverage_env/: coverage_class.py  env_generator.py  world_idf.py
python/data_generation/: simple_data_generation.py
python/evaluators/: eval.py
python/learning/: data_generation.py  eval.py  eval_multi.py  eval_rf_exp.py  eval_semantic_video.py  eval_single_dataset.py  eval_video.py  gen.sh  semantic_eval.py  simple_data_generation.py  train_cnn.py  train_gnn.py  train_gnn_stable.py
python/notebooks/: Experiment_Results.ipynb  Tests.ipynb  cnn_train.ipynb  start_jupyter.sh  test_dataset.ipynb
python/system_env/: world_map_numpy.py
python/tests/: coverage_algorithm.py  coverage_class.py  coverage_simple.py  gnn_coverage.py  plot_edge_weights.py  test_coverage.py  test_coverage_env_utils.py  test_env_io.py  test_library_objects.py  test_lpac_coverage.py  test_map_generation.py  test_models.py  test_package.py  test_parameters.py  test_parity.py  torch_compat.py  torch_extension.py
python/torch/: CMakeLists.txt
python/ts_jit/: TorchVisionResize_32.pt  gnn_backbone.py  torchvision_resize.py
python/utils/: dataset_utils.py  plot_constrained_learning_results.py  plot_costs_time.py  process_data.sh  run.sh  split_env.sh
python_setups/python/: CMakeLists.txt  pyproject.toml  setup.py
python_setups/torch_extension/: pyproject.toml
torch_cpp/: CMakeLists.txt  setup.py  torch_ext.cpp
torch_cpp/src/: test.cpp
(+606 files in other folders)
